fixed left nav on small screens

--- a/content.css
+++ b/content.css
@@ -829,6 +829,58 @@ margin-top: 5px;
   .containerPortal .column-3 .portlet{
     margin-bottom: 15px !important;
   }
+
+  .locationPane .contentPaneWide .container{
+    margin-top: 15px !important;
+  }
+
+  .navigationPane{
+    top: 37px !important;
+    border-top: none !important;
+  }
+
+  .navigationPane .menuWrap{
+    border: none !important;
+  }
+
+  #puller, #puller.pullcollapsed {
+    top: 50px !important;
+    left: 6px !important;
+    background-color: #999;
+  }
+
+  #puller a, #puller.pullcollapsed a{
+    width: 25px !important;
+    height: 25px !important;
+    z-index: 8;
+  }
+
+  #puller.pullcollapsed{
+    transform: translateX(-2px);
+  }
+
+/*  .navigationPane:after{
+    content: "";
+    position: absolute;
+    top: -15px;
+    left: 0;
+    width: 100%;
+    height: 16px;
+    background-color: var(--background-main);
+    z-index: 0;
+  }*/
+
+  .locationPane .contentPane{
+    margin-top: 30px !important;
+  }
+
+
+
+
+
+
+
+
 }
 
 /*  #puller{
